--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         python universal2_wheels.py
     - name: Reinstall in universal2
       run: |
+        source venv/bin/activate
         pip install combined_wheels/opencv_python-4.10.0.84-cp37-abi3-macosx_12_0_universal2.whl --force-reinstall
         pip install combined_wheels/pillow-10.3.0-cp312-cp312-macosx_11_0_universal2.whl --force-reinstall
         pip install combined_wheels/numpy-2.0.0-cp312-cp312-macosx_11_0_universal2.whl --force-reinstall
@@ -43,4 +44,5 @@ jobs:
         
     - name: Run script
       run: |
+        source venv/bin/activate
         python setup.py py2app
