--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,9 @@ jobs:
       run: |
         source venv/bin/activate
         python setup.py py2app
+        
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: built-app
+        path: dist/
