--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,11 @@ jobs:
         source venv/bin/activate
         cp -r tk_files/* venv/lib/
         
-    - name: Run script
+    - name: Build App
       run: |
         source venv/bin/activate
         python setup.py py2app
         
-    - name: Create dist directory
-      run: mkdir -p dist
-
-    - name: Move built app to dist directory
-      run: |
-        mv dist/*.app dist/
-
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
