--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,6 @@ jobs:
         chmod +x dist/*.app/Contents/MacOS/*
         ls -l dist/*.app/Contents/MacOS/
 
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: ExecutableApp
-        path: dist/*.app
+    - name: GH Release
+      uses: softprops/action-gh-release@v2.0.6
+            
