--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,7 @@ jobs:
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.6
+      with: 
+        files: |
+            dist/*.app
             
