--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,8 @@ jobs:
         ls -l dist/*.app/Contents/MacOS/
     - name: Zip App
       run: |
-         zip -r ExecutableApp${{ steps.vars.output.tag }}.zip dist/*.app
+         cd dist/
+         zip -r ExecutableApp${{ steps.vars.output.tag }}.zip *.app
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.6
