--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,6 @@ name: Python MacOS Universal2
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
 
 jobs:
   build:
@@ -61,10 +59,24 @@ jobs:
       run: |
          cd dist/
          zip -r ExecutableApp${{ steps.vars.output.tag }}.zip *.app
+         
+    - name: Conventional Changelog Action
+      id: changelog
+      uses: TriPSs/conventional-changelog-action@v5
+      with:
+        github-token: ${{ secrets.github_token }}
+        output-file: "false"
+        release-count: 0
+        skip-on-empty: "false"
 
     - name: GH Release
       uses: softprops/action-gh-release@v2.0.6
+      if: ${{ steps.changelog.outputs.skipped == 'false' }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.github_token }}
       with: 
+        tag_name: ${{ steps.changelog.outputs.tag }}
+        release_name: ${{ steps.changelog.outputs.tag }}
         files: |
-            ExecutableApp${{ steps.vars.output.tag }}.zip
+            ExecutableApp${{ steps.changelog.outputs.tag }}.zip
             
