--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,5 +78,5 @@ jobs:
         tag_name: ${{ steps.changelog.outputs.tag }}
         release_name: ${{ steps.changelog.outputs.tag }}
         files: |
-            ExecutableApp${{ steps.changelog.outputs.tag }}.zip
+            dist/ExecutableApp${{ steps.changelog.outputs.tag }}.zip
             
